# cmake-dependency-scan pkg:github/lwip-tcpip/lwip@3b53b6e481beed5787017222463626ae17943beb

add_library(lwip.lwip ${EMIL_EXCLUDE_FROM_ALL} STATIC)

target_include_directories(lwip.lwip PUBLIC
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/src/include/>"
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
)

target_link_libraries(lwip.lwip PUBLIC
    lwip.lwip_conf
)

if (${CMAKE_CXX_COMPILER_ID} STREQUAL AppleClang)
    target_compile_options(lwip.lwip PRIVATE -Wno-macro-redefined)
endif()

target_sources(lwip.lwip PRIVATE
    src/api/api_lib.c
    src/api/api_msg.c
    src/api/err.c
    src/api/if_api.c
    src/api/netbuf.c
    src/api/netdb.c
    src/api/netifapi.c
    src/api/sockets.c
    src/api/tcpip.c
    src/core/altcp.c
    src/core/altcp_alloc.c
    src/core/altcp_tcp.c
    src/core/def.c
    src/core/dns.c
    src/core/inet_chksum.c
    src/core/init.c
    src/core/ip.c
    src/core/mem.c
    src/core/memp.c
    src/core/netif.c
    src/core/pbuf.c
    src/core/raw.c
    src/core/stats.c
    src/core/sys.c
    src/core/tcp.c
    src/core/tcp_in.c
    src/core/tcp_out.c
    src/core/timeouts.c
    src/core/udp.c
    src/core/ipv4/autoip.c
    src/core/ipv4/dhcp.c
    src/core/ipv4/etharp.c
    src/core/ipv4/icmp.c
    src/core/ipv4/igmp.c
    src/core/ipv4/ip4.c
    src/core/ipv4/ip4_addr.c
    src/core/ipv4/ip4_frag.c
    src/core/ipv6/dhcp6.c
    src/core/ipv6/ethip6.c
    src/core/ipv6/icmp6.c
    src/core/ipv6/inet6.c
    src/core/ipv6/ip6.c
    src/core/ipv6/ip6_addr.c
    src/core/ipv6/ip6_frag.c
    src/core/ipv6/mld6.c
    src/core/ipv6/nd6.c
    src/include/lwip/altcp.h
    src/include/lwip/altcp_tcp.h
    src/include/lwip/altcp_tls.h
    src/include/lwip/api.h
    src/include/lwip/arch.h
    src/include/lwip/autoip.h
    src/include/lwip/debug.h
    src/include/lwip/def.h
    src/include/lwip/dhcp.h
    src/include/lwip/dhcp6.h
    src/include/lwip/dns.h
    src/include/lwip/err.h
    src/include/lwip/errno.h
    src/include/lwip/etharp.h
    src/include/lwip/ethip6.h
    src/include/lwip/icmp.h
    src/include/lwip/icmp6.h
    src/include/lwip/if_api.h
    src/include/lwip/igmp.h
    src/include/lwip/inet.h
    src/include/lwip/inet_chksum.h
    src/include/lwip/init.h
    src/include/lwip/ip.h
    src/include/lwip/ip_addr.h
    src/include/lwip/ip4.h
    src/include/lwip/ip4_addr.h
    src/include/lwip/ip4_frag.h
    src/include/lwip/ip6.h
    src/include/lwip/ip6_addr.h
    src/include/lwip/ip6_frag.h
    src/include/lwip/ip6_zone.h
    src/include/lwip/mem.h
    src/include/lwip/memp.h
    src/include/lwip/mld6.h
    src/include/lwip/nd6.h
    src/include/lwip/netbuf.h
    src/include/lwip/netdb.h
    src/include/lwip/netif.h
    src/include/lwip/netifapi.h
    src/include/lwip/opt.h
    src/include/lwip/pbuf.h
    src/include/lwip/raw.h
    src/include/lwip/sio.h
    src/include/lwip/snmp.h
    src/include/lwip/sockets.h
    src/include/lwip/stats.h
    src/include/lwip/sys.h
    src/include/lwip/tcp.h
    src/include/lwip/tcpbase.h
    src/include/lwip/tcpip.h
    src/include/lwip/timeouts.h
    src/include/lwip/udp.h
    src/include/lwip/priv/altcp_priv.h
    src/include/lwip/priv/api_msg.h
    src/include/lwip/priv/memp_priv.h
    src/include/lwip/priv/memp_std.h
    src/include/lwip/priv/mem_priv.h
    src/include/lwip/priv/nd6_priv.h
    src/include/lwip/priv/raw_priv.h
    src/include/lwip/priv/sockets_priv.h
    src/include/lwip/priv/tcp_priv.h
    src/include/lwip/priv/tcpip_priv.h
    src/include/lwip/prot/autoip.h
    src/include/lwip/prot/dhcp.h
    src/include/lwip/prot/dhcp6.h
    src/include/lwip/prot/dns.h
    src/include/lwip/prot/etharp.h
    src/include/lwip/prot/ethernet.h
    src/include/lwip/prot/iana.h
    src/include/lwip/prot/icmp.h
    src/include/lwip/prot/icmp6.h
    src/include/lwip/prot/ieee.h
    src/include/lwip/prot/igmp.h
    src/include/lwip/prot/ip.h
    src/include/lwip/prot/ip4.h
    src/include/lwip/prot/ip6.h
    src/include/lwip/prot/mld6.h
    src/include/lwip/prot/nd6.h
    src/include/lwip/prot/tcp.h
    src/include/lwip/prot/udp.h
    src/include/netif/bridgeif.h
    src/include/netif/bridgeif_opts.h
    src/include/netif/etharp.h
    src/include/netif/ethernet.h
    src/include/netif/ieee802154.h
    src/include/netif/lowpan6.h
    src/include/netif/lowpan6_ble.h
    src/include/netif/lowpan6_common.h
    src/include/netif/lowpan6_opts.h
    src/include/netif/slipif.h
    src/include/netif/zepif.h
    src/include/netif/ppp/ccp.h
    src/include/netif/ppp/chap_ms.h
    src/include/netif/ppp/chap-md5.h
    src/include/netif/ppp/chap-new.h
    src/include/netif/ppp/eap.h
    src/include/netif/ppp/ecp.h
    src/include/netif/ppp/eui64.h
    src/include/netif/ppp/fsm.h
    src/include/netif/ppp/ipcp.h
    src/include/netif/ppp/ipv6cp.h
    src/include/netif/ppp/lcp.h
    src/include/netif/ppp/magic.h
    src/include/netif/ppp/mppe.h
    src/include/netif/ppp/ppp.h
    src/include/netif/ppp/ppp_impl.h
    src/include/netif/ppp/ppp_opts.h
    src/include/netif/ppp/pppapi.h
    src/include/netif/ppp/pppcrypt.h
    src/include/netif/ppp/pppdebug.h
    src/include/netif/ppp/pppoe.h
    src/include/netif/ppp/pppol2tp.h
    src/include/netif/ppp/pppos.h
    src/include/netif/ppp/upap.h
    src/include/netif/ppp/vj.h
    src/include/netif/ppp/polarssl/arc4.h
    src/include/netif/ppp/polarssl/des.h
    src/include/netif/ppp/polarssl/md4.h
    src/include/netif/ppp/polarssl/md5.h
    src/include/netif/ppp/polarssl/sha1.h
    src/netif/bridgeif.c
    src/netif/bridgeif_fdb.c
    src/netif/ethernet.c
    src/netif/lowpan6.c
    src/netif/lowpan6_ble.c
    src/netif/lowpan6_common.c
    src/netif/slipif.c
    src/netif/zepif.c
    src/netif/ppp/auth.c
    src/netif/ppp/ccp.c
    src/netif/ppp/chap_ms.c
    src/netif/ppp/chap-md5.c
    src/netif/ppp/chap-new.c
    src/netif/ppp/demand.c
    src/netif/ppp/eap.c
    src/netif/ppp/ecp.c
    src/netif/ppp/eui64.c
    src/netif/ppp/fsm.c
    src/netif/ppp/ipcp.c
    src/netif/ppp/ipv6cp.c
    src/netif/ppp/lcp.c
    src/netif/ppp/magic.c
    src/netif/ppp/mppe.c
    src/netif/ppp/multilink.c
    src/netif/ppp/ppp.c
    src/netif/ppp/pppapi.c
    src/netif/ppp/pppcrypt.c
    src/netif/ppp/pppoe.c
    src/netif/ppp/pppol2tp.c
    src/netif/ppp/pppos.c
    src/netif/ppp/upap.c
    src/netif/ppp/utils.c
    src/netif/ppp/vj.c
)

emil_exclude_from_clang_format(lwip.lwip)
